<resources>
    <string name="app_name">INBA</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_students">INBA: Students</string>
    <string name="title_activity_courses">INBA: Courses</string>
    <string name="title_activity_student_courses">INBA: Student Course History</string>
    <string name="title_activity_course_students">INBA: Course Registrations</string>
    <string name="title_activity_transactions">INBA: Transactions</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>


    <string name="add_transaction">Add</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transaction_category">Category:</string>
    <string name="transaction_price">Price:</string>
    <string name="goto_date">Go To Date:</string>
    <string name="category_filter">Category Filter:</string>
    <string name="view_transaction">View</string>
    <string name="enter_date">Go To Date…</string>
    <string name="user_profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="user_name">Franklin Briskow</string>
    <string name="user_email">frankybrisky@umanitoba.ca</string>
    <string name="wk_spending_limit">Current Weekly Limit</string>
    <string name="mn_spending_limit">Current Monthly Limit</string>


    <string name="title_activity_threshold">ThresholdActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="title_activity_threshold">ThresholdActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
