<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="comp3350.inba.presentation.DashboardActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/dashboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:ignore="TextSizeCheck" 
        android:textColor="@color/colorAccent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp" />

    <ListView
        android:id="@+id/transaction_list"
        style="@style/transactionList"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_below="@+id/graph"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:stackFromBottom="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_below="@+id/transaction_list"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonTemp"
            style="@style/nav.Btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/buttonViewTransaction"
            style="@style/nav.Btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/view_transaction"
            android:src="@drawable/view" />

        <ImageButton
            android:id="@+id/buttonAddTransaction"
            style="@style/navAdd.Btn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/add_transaction"
            android:enabled="true"
            android:onClick="buttonAddTransactionOnClick"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/buttonSettings"
            style="@style/nav.Btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:drawableStart="@drawable/settings"
            android:enabled="true"
            android:src="@drawable/settings" />

        <ImageButton
            android:id="@+id/buttonProfile"
            style="@style/nav.Btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/user_profile"
            android:drawableStart="@drawable/profile"
            android:enabled="true"
            android:src="@drawable/profile" />

    </LinearLayout>

</RelativeLayout>
