<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.inba.presentation.TransactionsActivity">

    <ListView
        android:id="@+id/listTransactions"
        android:layout_width="368dp"
        android:layout_height="373dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:choiceMode="singleChoice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/transaction_category"
            android:id="@+id/textTransactionCategory"
            android:layout_marginBottom="60dp"
            android:layout_marginRight="60dp" />

        <EditText
            android:id="@+id/editTransactionCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions" />

<!--        <Button
            android:id="@+id/buttonTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:enabled="false"
            android:text="@string/registrations" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/transaction_price"
            android:id="@+id/textTransactionPrice"
            android:layout_marginBottom="64dp" />

        <EditText
            android:id="@+id/editTransactionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonTransactionDelete"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:onClick="buttonTransactionDeleteOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/buttonTransactionCreate"
            android:layout_alignParentLeft="true"
            android:enabled="true"
            android:onClick="buttonTransactionCreateOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonTransactionUpdate"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="buttonTransactionUpdateOnClick" />
    </RelativeLayout>

</LinearLayout>
